Update JVM 垃圾收集器